--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
+# netlify.toml
 [build]
-  command = "CI= npm run build"
-  publish = "build"
+  command = "CI= npm --prefix client run build"
+  publish = "client/build"
 
 [build.environment]
-  NODE_VERSION = "18"   
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/*"
