--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,7 +1,12 @@
+# netlify.toml
+[build]
+  command = "CI= npm --prefix client run build"
+  publish = "client/build"
+
+[build.environment]
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-
