--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,11 +4,11 @@
 .pnp.js
 
 # Environment variables
-.env
-.env.local
-.env.development
-.env.test
-.env.production
+# .env
+# .env.local
+# .env.development
+# .env.test
+# .env.production
 
 # Logs
 logs
@@ -69,9 +69,9 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.test
-.env.production
+# .env
+# .env.test
+# .env.production
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
